# solcheck

./: Cargo.toml  main.rs
src/: lib.rs  main.rs
